--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,10 @@ services:
     image: postgres
     volumes:
       - ./tmp/db:/var/lib/postgresql/data
+  redis:
+    image: redis
+    ports:
+      - "6379:6379"  
   web:
     build: .
     command: bundle exec rails s -p 3000 -b '0.0.0.0'
@@ -13,3 +17,4 @@ services:
       - "3000:3000"
     depends_on:
       - db
+      - redis
