--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       - ./tmp/db:/var/lib/postgresql/data
   redis:
     image: redis
+    command: redis-server
     ports:
       - "6379:6379"  
   web:
